# ray-mesh-intersection

./: CMakeLists.txt  LICENSE  README.md  coi-serviceworker.min.js  index.html
.github/workflows/: cmake-multi-platform.yml
app/: CMakeLists.txt  main.cpp
app/include/: camera.hpp  mainwindow.hpp  mesh_viewer.hpp
app/src/: camera.cpp  main.cpp  mainwindow.cpp  mesh_viewer.cpp
benchmark/: README.md  intersections-benchmark.md
include/: readers.hpp  rmi_algorithm.hpp
include/mesh_readers/: reader.hpp
include/meshes/: triangular_mesh.hpp
include/octree/: octree.hpp
include/readers/: reader.hpp
include/rmilib/: aabbox.hpp  kd_tree.hpp  mesh.hpp  parallel_algos.hpp  raw_mesh.hpp  ray.hpp  reader.hpp  rmi.hpp  rmi_parallel.hpp  thread_pool.hpp  tree.hpp  triangle.hpp  triangular_mesh.hpp  vector.hpp
include/trees/: kd_tree.hpp
include/utils/: aabbox.hpp  box.hpp  misc.hpp  ray.hpp  result.hpp  triangle.hpp  vector.hpp
src/: CMakeLists.txt  kd_tree.cpp  obj_reader.cpp  parallel_algos.cpp  ply_reader.cpp  ray.cpp  reader.cpp  stl_reader.cpp  triangle.cpp  triangular_mesh.cpp  vector.cpp
src/mesh_readers/: auto_reader.cpp  obj_reader.cpp  ply_reader.cpp  reader.cpp  stl_reader.cpp
src/meshes/: triangular_mesh.cpp
src/octree/: octree.cpp
src/readers/: obj_reader.cpp  ply_reader.cpp  reader.cpp  stl_reader.cpp
src/trees/: kd_tree.cpp
src/utils/: box.hpp  ray.cpp  triangle.cpp  vector.cpp
test/: CMakeLists.txt  intersection_benchmark.cpp  intersection_performance_test.cpp  intersector_performance_test.cpp  kd_tree_benchmark.cpp  kd_tree_test.cpp  ray_test.cpp  reader_test.cpp  sample_test1.cpp  sample_test2.cpp  tree_benchmark.cpp  triangle_test.cpp  vector_test.cpp
web/: CMakeLists.txt  rmilib_interface.cpp  rmilib_par.cpp  rmilib_seq.cpp  rmilib_shared.hpp
web/css/: style.css
web/js/: camera.js  drawable.js  intersection_handler.js  mesh.js  points.js  rmilib_par.js  rmilib_par.wasm  rmilib_par.worker.js  rmilib_seq.js  rmilib_seq.wasm  rmilib_wasm.js  rmilib_wasm.wasm  tree.js  viewer.js
